--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -1,23 +1,23 @@
 [Desktop Entry]
 Name=MX Boot Repair
 Name[de]=MX Bootreparatur
+Name[el]=Επισκευή Εκκίνησης του MX
 Name[es]=MX Reparar Inicialización
 Name[fr]=MX Réparation du démarrage
 Name[it]=MX Riparazione di avvio
+Name[ja]=MX 起動処理の修正
 Name[nl]=MX Boot Reparatie
 Name[sv]=MX Boot-reparation
-Name[el]=Επισκευή Εκκίνησης του MX
-Name[ru]=
 Comment=Simple Boot Repair
 Comment[de]=einfache boot Reparatur
+Comment[el]=Απλή Επισκευή Εκκίνησης
 Comment[es]=Reparación de Inicialización
 Comment[fr]=Réparation du démarrage simple
 Comment[it]=Semplice riparazione di avvio
+Comment[ja]=シンプルな起動処理の修正
 Comment[nl]=Eenvoudige Boot Reparatie
 Comment[sv]=Enkel Boot-reparation
-Comment[el]=Απλή Επισκευή Εκκίνησης
-Comment[ru]=
-Exec=gksu mx-bootrepair
+Exec=su-to-root -X -c mx-bootrepair
 Icon=/usr/share/pixmaps/mx/mx-bootrepair.png
 NoDisplay=false
 Categories=System;
