added .destop translations

--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -7,7 +7,7 @@ Name[it]=MX Riparazione di avvio
 Name[nl]=MX Boot Reparatie
 Name[sv]=MX Boot-reparation
 Name[el]=Επισκευή Εκκίνησης του MX
-Name[ru]=
+Name[ja]=MX 起動処理の修正
 Comment=Simple Boot Repair
 Comment[de]=einfache boot Reparatur
 Comment[es]=Reparación de Inicialización
@@ -16,7 +16,7 @@ Comment[it]=Semplice riparazione di avvio
 Comment[nl]=Eenvoudige Boot Reparatie
 Comment[sv]=Enkel Boot-reparation
 Comment[el]=Απλή Επισκευή Εκκίνησης
-Comment[ru]=
+Comment[ja]=シンプルな起動処理の修正
 Exec=gksu mx-bootrepair
 Icon=/usr/share/pixmaps/mx/mx-bootrepair.png
 NoDisplay=false
