added Ja to .desktop

--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -10,13 +10,13 @@ Name[ja]=MX 起動処理の修正
 Name[nl]=MX Boot Reparatie
 Name[sv]=MX Boot-reparation
 Comment=Simple Boot Repair
-Comment[ca]=Reparació d'arrencada
+Comment[ca]=Reparació senzilla de l'arrencada
 Comment[de]=einfache boot Reparatur
 Comment[el]=Απλή Επισκευή Εκκίνησης
 Comment[es]=Reparación de Inicialización
 Comment[fr]=Réparation du démarrage simple
 Comment[it]=Semplice riparazione di avvio
-Comment[ja]=シンプルな起動処理の修正
+Comment[ja]=シンプル起動(ブート)修理
 Comment[nl]=Eenvoudige Boot Reparatie
 Comment[sv]=Enkel Boot-reparation
 Exec=su-to-root -X -c mx-bootrepair
