uptodate translation files for mx-bootrepair

--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -8,6 +8,7 @@ Name[fr]=MX Réparation du démarrage
 Name[it]=MX Riparazione di avvio
 Name[ja]=MX 起動処理の修正
 Name[nl]=MX Boot Reparatie
+Name[ru]=MX Восстановление загрузчика
 Name[sv]=MX Boot-reparation
 Comment=Simple Boot Repair
 Comment[ca]=Reparació senzilla de l'arrencada
@@ -18,6 +19,7 @@ Comment[fr]=Réparation du démarrage simple
 Comment[it]=Semplice riparazione di avvio
 Comment[ja]=シンプル起動(ブート)修理
 Comment[nl]=Eenvoudige Boot Reparatie
+Comment[ru]=Простая программа для восстановления загрузчика в MX Linux
 Comment[sv]=Enkel Boot-reparation
 Exec=su-to-root -X -c mx-bootrepair
 Icon=/usr/share/pixmaps/mx/mx-bootrepair.png
