--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -5,21 +5,21 @@ Name[de]=MX Bootreparatur
 Name[el]=Επισκευή Εκκίνησης του MX
 Name[es]=MX Reparar Inicialización
 Name[fr]=MX Réparation du démarrage
-Name[it]=MX Riparazione di avvio
+Name[it]=MX Ripara Boot
 Name[ja]=MX 起動処理の修正
 Name[nl]=MX Boot Reparatie
 Name[ru]=MX Восстановление загрузчика
 Name[sv]=MX Boot-reparation
 Comment=Simple Boot Repair
 Comment[ca]=Reparació senzilla de l'arrencada
-Comment[de]=einfache boot Reparatur
+Comment[de]=einfache Boot-Reparatur
 Comment[el]=Απλή Επισκευή Εκκίνησης
 Comment[es]=Reparación de Inicialización
 Comment[fr]=Réparation du démarrage simple
-Comment[it]=Semplice riparazione di avvio
+Comment[it]=Riparazione del boot di avvio del sistema
 Comment[ja]=シンプル起動(ブート)修理
 Comment[nl]=Eenvoudige Boot Reparatie
-Comment[ru]=Простая программа для восстановления загрузчика в MX Linux
+Comment[ru]=Простое восстановление загрузчика
 Comment[sv]=Enkel Boot-reparation
 Exec=su-to-root -X -c mx-bootrepair
 Icon=/usr/share/pixmaps/mx/mx-bootrepair.png
