new build translations, move app icon location

--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -22,7 +22,7 @@ Comment[nl]=Eenvoudige Boot Reparatie
 Comment[ru]=Простое восстановление загрузчика
 Comment[sv]=Enkel Boot-reparation
 Exec=su-to-root -X -c mx-bootrepair
-Icon=/usr/share/pixmaps/mx/mx-bootrepair.png
+Icon=mx-bootrepair
 NoDisplay=false
 Categories=System;
 Type=Application
