--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -24,5 +24,5 @@ Comment[sv]=Enkel Boot-reparation
 Exec=su-to-root -X -c mx-bootrepair
 Icon=mx-bootrepair
 NoDisplay=false
-Categories=System;
+Categories=System;MX-Maintenance;
 Type=Application
