--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -10,7 +10,7 @@ Name[ja]=MX 起動処理の修正
 Name[nl]=MX Boot Reparatie
 Name[ru]=MX Восстановление загрузчика
 Name[sv]=MX Boot-reparation
-Comment=Simple Boot Repair
+Comment=Simple boot repair
 Comment[ca]=Reparació senzilla de l'arrencada
 Comment[de]=einfache Boot-Reparatur
 Comment[el]=Απλή Επισκευή Εκκίνησης
