updated translations for mx-bootrepair

--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -8,8 +8,10 @@ Name[fr]=MX Réparation du démarrage
 Name[it]=MX Ripara Boot
 Name[ja]=MX 起動処理の修正
 Name[nl]=MX Boot Reparatie
+Name[pt]=MX_Reparador de Iniciação (Boot)
 Name[ru]=MX Восстановление загрузчика
 Name[sv]=MX Boot-reparation
+Name[tr]=MX Önyükleme Onarımı
 Comment=Simple boot repair
 Comment[ca]=Reparació senzilla de l'arrencada
 Comment[de]=einfache Boot-Reparatur
@@ -20,7 +22,9 @@ Comment[it]=Riparazione del boot di avvio del sistema
 Comment[ja]=シンプル起動(ブート)修理
 Comment[nl]=Eenvoudige Boot Reparatie
 Comment[ru]=Простое восстановление загрузчика
+Comment[pt]=Reparador de iniciação fácil de usar
 Comment[sv]=Enkel Boot-reparation
+Comment[tr]=Basit Önyükleme Onarımı
 Exec=su-to-root -X -c mx-bootrepair
 Icon=mx-bootrepair
 NoDisplay=false
