revised translations for mx-bootrepair, plus new .pro, .desktop

--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -1,12 +1,14 @@
 [Desktop Entry]
 Name=MX Boot Repair
 Name[ca]=MX Boot Repair
+Name[cs]=MX Oprava zavaděče
 Name[de]=MX Bootreparatur
 Name[el]=Επισκευή Εκκίνησης του MX
 Name[es]=MX Reparar Inicialización
 Name[fr]=MX Réparation du démarrage
 Name[it]=MX Ripara Boot
 Name[ja]=MX 起動処理の修正
+Name[lt]=MX Paleidimo taisymas
 Name[nl]=MX Boot Reparatie
 Name[pt]=MX_Reparador de Iniciação (Boot)
 Name[ru]=MX Восстановление загрузчика
@@ -14,12 +16,14 @@ Name[sv]=MX Boot-reparation
 Name[tr]=MX Önyükleme Onarımı
 Comment=Simple boot repair
 Comment[ca]=Reparació senzilla de l'arrencada
+Comment[cs]=Jednoduchá oprava zavaděče
 Comment[de]=einfache Boot-Reparatur
 Comment[el]=Απλή Επισκευή Εκκίνησης
 Comment[es]=Reparación de Inicialización
 Comment[fr]=Réparation du démarrage simple
 Comment[it]=Riparazione del boot di avvio del sistema
 Comment[ja]=シンプル起動(ブート)修理
+Comment[lt]=Paprastas paleidimo taisymas
 Comment[nl]=Eenvoudige Boot Reparatie
 Comment[ru]=Простое восстановление загрузчика
 Comment[pt]=Reparador de iniciação fácil de usar
