--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -12,6 +12,7 @@ Name[lt]=MX Paleidimo taisymas
 Name[nl]=MX Boot Reparatie
 Name[pt]=MX_Reparador de Iniciação (Boot)
 Name[ru]=MX Восстановление загрузчика
+Name[sk]=MX Oprava zavádzača
 Name[sv]=MX Boot-reparation
 Name[tr]=MX Önyükleme Onarımı
 Comment=Simple boot repair
@@ -27,6 +28,7 @@ Comment[lt]=Paprastas paleidimo taisymas
 Comment[nl]=Eenvoudige Boot Reparatie
 Comment[ru]=Простое восстановление загрузчика
 Comment[pt]=Reparador de iniciação fácil de usar
+Comment[sk]=Opraviť zavádzač
 Comment[sv]=Enkel Boot-reparation
 Comment[tr]=Basit Önyükleme Onarımı
 Exec=su-to-root -X -c mx-bootrepair
