updated translations and desktop for mx-bootrepair

--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -4,11 +4,11 @@ Name[ca]=MX Boot Repair
 Name[cs]=MX Oprava zavaděče
 Name[de]=MX Bootreparatur
 Name[el]=Επισκευή Εκκίνησης του MX
-Name[es]=MX Reparar Inicialización
-Name[fr]=MX Réparation du démarrage
+Name[es]=MX Reparar Inicio
+Name[fr]=Outil MX de Réparation du démarrage
 Name[it]=MX Ripara Boot
 Name[ja]=MX 起動処理の修正
-Name[lt]=MX Paleidimo taisymas
+Name[lt]=MX paleidimo taisymas
 Name[nl]=MX Boot Reparatie
 Name[pt]=MX_Reparador de Iniciação (Boot)
 Name[ru]=MX Восстановление загрузчика
@@ -26,8 +26,8 @@ Comment[it]=Riparazione del boot di avvio del sistema
 Comment[ja]=シンプル起動(ブート)修理
 Comment[lt]=Paprastas paleidimo taisymas
 Comment[nl]=Eenvoudige Boot Reparatie
-Comment[ru]=Простое восстановление загрузчика
 Comment[pt]=Reparador de iniciação fácil de usar
+Comment[ru]=Простое восстановление загрузчика
 Comment[sk]=Opraviť zavádzač
 Comment[sv]=Enkel Boot-reparation
 Comment[tr]=Basit Önyükleme Onarımı
