Translations, .desktop, .pro for mx-boot-repair

--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -1,32 +1,36 @@
 [Desktop Entry]
 Name=MX Boot Repair
+Name[am]=MX ማስነሻ መጠገኛ
 Name[ca]=MX Boot Repair
 Name[cs]=MX Oprava zavaděče
 Name[de]=MX Bootreparatur
 Name[el]=Επισκευή Εκκίνησης του MX
 Name[es]=MX Reparar Inicio
 Name[fr]=Outil MX de Réparation du démarrage
+Name[hu]=MX bootjavító
 Name[it]=MX Ripara Boot
 Name[ja]=MX 起動処理の修正
 Name[lt]=MX paleidimo taisymas
 Name[nl]=MX Boot Reparatie
-Name[pt]=MX_Reparador de Iniciação (Boot)
+Name[pt]=MX-Reparador do arranque
 Name[ru]=MX Восстановление загрузчика
 Name[sk]=MX Oprava zavádzača
 Name[sv]=MX Boot-reparation
 Name[tr]=MX Önyükleme Onarımı
 Comment=Simple boot repair
+Comment[am]=ቀላል ማስነሻ መጠገኛ
 Comment[ca]=Reparació senzilla de l'arrencada
 Comment[cs]=Jednoduchá oprava zavaděče
-Comment[de]=einfache Boot-Reparatur
+Comment[de]=Einfache Boot-Reparatur
 Comment[el]=Απλή Επισκευή Εκκίνησης
 Comment[es]=Reparación de Inicialización
 Comment[fr]=Réparation du démarrage simple
+Comment[hu]=Egyszerű bootjavító
 Comment[it]=Riparazione del boot di avvio del sistema
 Comment[ja]=シンプル起動(ブート)修理
 Comment[lt]=Paprastas paleidimo taisymas
 Comment[nl]=Eenvoudige Boot Reparatie
-Comment[pt]=Reparador de iniciação fácil de usar
+Comment[pt]=Reparador do arranque fácil de usar
 Comment[ru]=Простое восстановление загрузчика
 Comment[sk]=Opraviť zavádzač
 Comment[sv]=Enkel Boot-reparation
