Updated translations, .desktop, .pro for mx-bootrepair

--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -6,35 +6,53 @@ Name[cs]=MX Oprava zavaděče
 Name[de]=MX Bootreparatur
 Name[el]=Επισκευή Εκκίνησης του MX
 Name[es]=MX Reparar Inicio
+Name[fi]=Käynnistyksen korjaus
 Name[fr]=Outil MX de Réparation du démarrage
+Name[hi]=MX Boot Repair
+Name[hr]=MX Boot Repair
 Name[hu]=MX bootjavító
 Name[it]=MX Ripara Boot
 Name[ja]=MX 起動処理の修正
+Name[kk]=MX Boot Repair
 Name[lt]=MX paleidimo taisymas
 Name[nl]=MX Boot Reparatie
-Name[pt]=MX-Reparador do arranque
+Name[pl]=MX Boot Repair
+Name[pt]=MX-Reparador do Arranque
+Name[pt_BR]=MX Boot Repair
+Name[ro]=MX Boot Repair
 Name[ru]=MX Восстановление загрузчика
 Name[sk]=MX Oprava zavádzača
 Name[sv]=MX Boot-reparation
 Name[tr]=MX Önyükleme Onarımı
-Comment=Simple boot repair
+Name[uk]=MX Boot Repair
+Name[zh_TW]=MX 開機修復
+Comment=Simple Boot Repair
 Comment[am]=ቀላል ማስነሻ መጠገኛ
 Comment[ca]=Reparació senzilla de l'arrencada
 Comment[cs]=Jednoduchá oprava zavaděče
 Comment[de]=Einfache Boot-Reparatur
 Comment[el]=Απλή Επισκευή Εκκίνησης
 Comment[es]=Reparación de Inicialización
+Comment[fi]=Simple Boot Repair
 Comment[fr]=Réparation du démarrage simple
+Comment[hi]=Simple Boot Repair
+Comment[hr]=Simple Boot Repair
 Comment[hu]=Egyszerű bootjavító
 Comment[it]=Riparazione del boot di avvio del sistema
 Comment[ja]=シンプル起動(ブート)修理
+Comment[kk]=Simple Boot Repair
 Comment[lt]=Paprastas paleidimo taisymas
 Comment[nl]=Eenvoudige Boot Reparatie
-Comment[pt]=Reparador do arranque fácil de usar
+Comment[pl]=Simple Boot Repair
+Comment[pt]=Reparador do Arranque fácil de usar [mx-bootrepair]
+Comment[pt_BR]=Simple Boot Repair
+Comment[ro]=Simple Boot Repair
 Comment[ru]=Простое восстановление загрузчика
 Comment[sk]=Opraviť zavádzač
 Comment[sv]=Enkel Boot-reparation
 Comment[tr]=Basit Önyükleme Onarımı
+Comment[uk]=Simple Boot Repair
+Comment[zh_TW]=簡單的開機修復工具
 Exec=su-to-root -X -c mx-bootrepair
 Icon=mx-bootrepair
 NoDisplay=false
