--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,6 @@ Vcs-Git: git://github.com/AdrianTM/mx-bootrepair
 
 Package: mx-bootrepair
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}, grub-pc, mx-viewer|xdg-utils, menu
+Depends: ${misc:Depends}, ${shlibs:Depends}, grub-pc, mx-viewer|xdg-utils, menu, gzip
 Description: MX program to help with repair of boot problems.
  MX-bootrepair helps with the repair of boot problems.
