--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -5,7 +5,7 @@ Name[ca]=MX Boot Repair
 Name[cs]=MX Oprava zavaděče
 Name[de]=MX Bootreparatur
 Name[el]=Επισκευή Εκκίνησης του MX
-Name[es]=MX Reparar Inicio
+Name[es]=MX Boot Repair
 Name[fi]=Käynnistyksen korjaus
 Name[fr]=Outil MX de Réparation du démarrage
 Name[hi]=MX Boot Repair
@@ -17,8 +17,8 @@ Name[kk]=MX Boot Repair
 Name[lt]=MX paleidimo taisymas
 Name[nl]=MX Boot Reparatie
 Name[pl]=MX Boot Repair
+Name[pt_BR]=MX-Reparador da Inicialização
 Name[pt]=MX-Reparador do Arranque
-Name[pt_BR]=MX Boot Repair
 Name[ro]=MX Boot Repair
 Name[ru]=MX Восстановление загрузчика
 Name[sk]=MX Oprava zavádzača
@@ -44,8 +44,8 @@ Comment[kk]=Simple Boot Repair
 Comment[lt]=Paprastas paleidimo taisymas
 Comment[nl]=Eenvoudige Boot Reparatie
 Comment[pl]=Simple Boot Repair
+Comment[pt_BR]=Reparador do Arranque fácil de usar [mx-bootrepair]
 Comment[pt]=Reparador do Arranque fácil de usar [mx-bootrepair]
-Comment[pt_BR]=Simple Boot Repair
 Comment[ro]=Simple Boot Repair
 Comment[ru]=Простое восстановление загрузчика
 Comment[sk]=Opraviť zavádzač
