--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -3,6 +3,7 @@ Name=MX Boot Repair
 Name[am]=MX ማስነሻ መጠገኛ
 Name[ca]=MX Boot Repair
 Name[cs]=MX Oprava zavaděče
+Name[da]=MX Opstartsreparation
 Name[de]=MX Bootreparatur
 Name[el]=Επισκευή Εκκίνησης του MX
 Name[es]=MX Boot Repair
@@ -11,17 +12,19 @@ Name[fr]=Outil MX de Réparation du démarrage
 Name[hi]=MX Boot Repair
 Name[hr]=MX Boot Repair
 Name[hu]=MX bootjavító
+Name[is]=Gera við ræsiferli MX
 Name[it]=MX Ripara Boot
 Name[ja]=MX 起動処理の修正
 Name[kk]=MX Boot Repair
 Name[lt]=MX paleidimo taisymas
 Name[nl]=MX Boot Reparatie
 Name[pl]=MX Boot Repair
-Name[pt_BR]=MX-Reparador da Inicialização
+Name[pt_BR]=MX Reparador de Inicialização
 Name[pt]=MX-Reparador do Arranque
 Name[ro]=MX Boot Repair
 Name[ru]=MX Восстановление загрузчика
 Name[sk]=MX Oprava zavádzača
+Name[sq]=MX Boot Repair
 Name[sv]=MX Boot-reparation
 Name[tr]=MX Önyükleme Onarımı
 Name[uk]=MX Boot Repair
@@ -30,6 +33,7 @@ Comment=Simple Boot Repair
 Comment[am]=ቀላል ማስነሻ መጠገኛ
 Comment[ca]=Reparació senzilla de l'arrencada
 Comment[cs]=Jednoduchá oprava zavaděče
+Comment[da]=Simpel opstartsreparation
 Comment[de]=Einfache Boot-Reparatur
 Comment[el]=Απλή Επισκευή Εκκίνησης
 Comment[es]=Reparación de Inicialización
@@ -38,17 +42,19 @@ Comment[fr]=Réparation du démarrage simple
 Comment[hi]=Simple Boot Repair
 Comment[hr]=Simple Boot Repair
 Comment[hu]=Egyszerű bootjavító
+Comment[is]=Einfalt forrit til að gera við ræsiferlið
 Comment[it]=Riparazione del boot di avvio del sistema
 Comment[ja]=シンプル起動(ブート)修理
 Comment[kk]=Simple Boot Repair
 Comment[lt]=Paprastas paleidimo taisymas
 Comment[nl]=Eenvoudige Boot Reparatie
 Comment[pl]=Simple Boot Repair
-Comment[pt_BR]=Reparador do Arranque fácil de usar [mx-bootrepair]
+Comment[pt_BR]=Reparador de Inicialização fácil de usar [mx-bootrepair]
 Comment[pt]=Reparador do Arranque fácil de usar [mx-bootrepair]
 Comment[ro]=Simple Boot Repair
 Comment[ru]=Простое восстановление загрузчика
 Comment[sk]=Opraviť zavádzač
+Comment[sq]=Simple Boot Repair
 Comment[sv]=Enkel Boot-reparation
 Comment[tr]=Basit Önyükleme Onarımı
 Comment[uk]=Simple Boot Repair
