Translation refresh Jan 2019

--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -6,7 +6,7 @@ Name[cs]=MX Oprava zavaděče
 Name[da]=MX Opstartsreparation
 Name[de]=MX Bootreparatur
 Name[el]=Επισκευή Εκκίνησης του MX
-Name[es]=MX Boot Repair
+Name[es]=MX Reparar Inicio
 Name[fi]=Käynnistyksen korjaus
 Name[fr]=Outil MX de Réparation du démarrage
 Name[hi]=MX Boot Repair
