Translation refresh April 2019

--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -1,63 +1,91 @@
 [Desktop Entry]
 Name=MX Boot Repair
 Name[am]=MX ማስነሻ መጠገኛ
+Name[ar]=MX Boot Repair
+Name[bg]=MX Boot Repair
 Name[ca]=MX Boot Repair
 Name[cs]=MX Oprava zavaděče
 Name[da]=MX Opstartsreparation
 Name[de]=MX Bootreparatur
 Name[el]=Επισκευή Εκκίνησης του MX
 Name[es]=MX Reparar Inicio
+Name[et]=MX Boot Repair
+Name[eu]=MX Boot Repair
+Name[fa]=MX Boot Repair
 Name[fi]=Käynnistyksen korjaus
 Name[fr]=Outil MX de Réparation du démarrage
+Name[he_IL]=MX Boot Repair
 Name[hi]=MX Boot Repair
 Name[hr]=MX Boot Repair
 Name[hu]=MX bootjavító
+Name[id]=MX Boot Repair
 Name[is]=Gera við ræsiferli MX
 Name[it]=MX Ripara Boot
+Name[ja_JP]=MX Boot Repair
 Name[ja]=MX 起動処理の修正
 Name[kk]=MX Boot Repair
+Name[ko]=MX Boot Repair
 Name[lt]=MX paleidimo taisymas
+Name[mk]=MX Boot Repair
+Name[nb]=MX Boot Repair
 Name[nl]=MX Boot Reparatie
-Name[pl]=MX Boot Repair
+Name[pl]=MX Naprawa rozruchu
 Name[pt_BR]=MX Reparador de Inicialização
 Name[pt]=MX-Reparador do Arranque
 Name[ro]=MX Boot Repair
 Name[ru]=MX Восстановление загрузчика
 Name[sk]=MX Oprava zavádzača
+Name[sl]=MX Boot Repair
 Name[sq]=MX Boot Repair
+Name[sr]=MX Boot Repair
 Name[sv]=MX Boot-reparation
 Name[tr]=MX Önyükleme Onarımı
 Name[uk]=MX Boot Repair
+Name[zh_CN]=MX Boot Repair
 Name[zh_TW]=MX 開機修復
 Comment=Simple Boot Repair
 Comment[am]=ቀላል ማስነሻ መጠገኛ
+Comment[ar]=Simple Boot Repair
+Comment[bg]=Simple Boot Repair
 Comment[ca]=Reparació senzilla de l'arrencada
 Comment[cs]=Jednoduchá oprava zavaděče
 Comment[da]=Simpel opstartsreparation
 Comment[de]=Einfache Boot-Reparatur
 Comment[el]=Απλή Επισκευή Εκκίνησης
 Comment[es]=Reparación de Inicialización
+Comment[et]=Simple Boot Repair
+Comment[eu]=Simple Boot Repair
+Comment[fa]=Simple Boot Repair
 Comment[fi]=Simple Boot Repair
 Comment[fr]=Réparation du démarrage simple
+Comment[he_IL]=Simple Boot Repair
 Comment[hi]=Simple Boot Repair
 Comment[hr]=Simple Boot Repair
 Comment[hu]=Egyszerű bootjavító
+Comment[id]=Simple Boot Repair
 Comment[is]=Einfalt forrit til að gera við ræsiferlið
 Comment[it]=Riparazione del boot di avvio del sistema
+Comment[ja_JP]=Simple Boot Repair
 Comment[ja]=シンプル起動(ブート)修理
 Comment[kk]=Simple Boot Repair
+Comment[ko]=Simple Boot Repair
 Comment[lt]=Paprastas paleidimo taisymas
+Comment[mk]=Simple Boot Repair
+Comment[nb]=Simple Boot Repair
 Comment[nl]=Eenvoudige Boot Reparatie
-Comment[pl]=Simple Boot Repair
+Comment[pl]=Prosta naprawa rozruchu
 Comment[pt_BR]=Reparador de Inicialização fácil de usar [mx-bootrepair]
 Comment[pt]=Reparador do Arranque fácil de usar [mx-bootrepair]
 Comment[ro]=Simple Boot Repair
 Comment[ru]=Простое восстановление загрузчика
 Comment[sk]=Opraviť zavádzač
+Comment[sl]=Simple Boot Repair
 Comment[sq]=Simple Boot Repair
+Comment[sr]=Simple Boot Repair
 Comment[sv]=Enkel Boot-reparation
 Comment[tr]=Basit Önyükleme Onarımı
 Comment[uk]=Simple Boot Repair
+Comment[zh_CN]=Simple Boot Repair
 Comment[zh_TW]=簡單的開機修復工具
 Exec=su-to-root -X -c mx-bootrepair
 Icon=mx-bootrepair
