Translation refresh for MX-19

--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -35,7 +35,7 @@ Name[pt]=MX-Reparador do Arranque
 Name[ro]=MX Boot Repair
 Name[ru]=MX Восстановление загрузчика
 Name[sk]=MX Oprava zavádzača
-Name[sl]=MX Boot Repair
+Name[sl]=Popravljanje zagona
 Name[sq]=MX Boot Repair
 Name[sr]=MX Boot Repair
 Name[sv]=MX Boot-reparation
@@ -79,7 +79,7 @@ Comment[pt]=Reparador do Arranque fácil de usar [mx-bootrepair]
 Comment[ro]=Simple Boot Repair
 Comment[ru]=Простое восстановление загрузчика
 Comment[sk]=Opraviť zavádzač
-Comment[sl]=Simple Boot Repair
+Comment[sl]=Preprosto popravljanje zagona
 Comment[sq]=Simple Boot Repair
 Comment[sr]=Simple Boot Repair
 Comment[sv]=Enkel Boot-reparation
