--- a/mx-bootrepair.desktop
+++ b/mx-bootrepair.desktop
@@ -27,6 +27,7 @@ Name[kk]=MX Boot Repair
 Name[ko]=MX Boot Repair
 Name[lt]=MX paleidimo taisymas
 Name[mk]=MX Boot Repair
+Name[mr]=MX Boot Repair
 Name[nb]=MX Boot Repair
 Name[nl]=MX Boot Reparatie
 Name[pl]=MX Naprawa rozruchu
@@ -71,6 +72,7 @@ Comment[kk]=Simple Boot Repair
 Comment[ko]=Simple Boot Repair
 Comment[lt]=Paprastas paleidimo taisymas
 Comment[mk]=Simple Boot Repair
+Comment[mr]=Simple Boot Repair
 Comment[nb]=Simple Boot Repair
 Comment[nl]=Eenvoudige Boot Reparatie
 Comment[pl]=Prosta naprawa rozruchu
