--- a/mx-boot-repair.desktop
+++ b/mx-boot-repair.desktop
@@ -89,7 +89,7 @@ Comment[tr]=Basit Önyükleme Onarımı
 Comment[uk]=Simple Boot Repair
 Comment[zh_CN]=Simple Boot Repair
 Comment[zh_TW]=簡單的開機修復工具
-Exec=su-to-root -X -c mx-bootrepair
+Exec=su-to-root -X -c mx-boot-repair
 Icon=mx-bootrepair
 NoDisplay=false
 Categories=System;MX-Maintenance;
