Use a launcher to preserve environment and use user's theme

--- a/mx-boot-repair.desktop
+++ b/mx-boot-repair.desktop
@@ -87,7 +87,7 @@ Comment[tr]=Basit Önyükleme Onarımı
 Comment[uk]=Simple Boot Repair
 Comment[zh_CN]=Simple Boot Repair
 Comment[zh_TW]=簡單的開機修復工具
-Exec=su-to-root -X -c mx-boot-repair
+Exec=mxbr-launcher
 Icon=mx-boot-repair
 NoDisplay=false
 Categories=System;MX-Maintenance;
