--- a/mx-boot-repair.desktop
+++ b/mx-boot-repair.desktop
@@ -4,7 +4,7 @@ Name[ca]=MX Boot Repair
 Name[cs]=MX Oprava zavaděče
 Name[da]=MX Opstartsreparation
 Name[de]=MX Bootreparatur
-Name[el]=Επισκευή Εκκίνησης του MX
+Name[el]=Επισκευή εκκίνησης του MX
 Name[es]=MX Reparar Inicio
 Name[es_ES]=MX Reparar Arranque
 Name[fi]=Käynnistyksen korjaus
@@ -48,7 +48,7 @@ Comment[cs]=Jednoduchá oprava zavaděče
 Comment[cy]=Atgyweirio Cist Syml
 Comment[da]=Simpel opstartsreparation
 Comment[de]=Einfache Boot-Reparatur
-Comment[el]=Απλή Επισκευή Εκκίνησης
+Comment[el]=Απλή επισκευή εκκίνησης
 Comment[eo]=Simpla Boot Riparo
 Comment[es]=Reparación de Inicialización
 Comment[es_ES]=Un reparador de arranque sencillo
