--- a/mx-boot-repair.desktop
+++ b/mx-boot-repair.desktop
@@ -3,8 +3,8 @@ Name[am]=MX ማስነሻ መጠገኛ
 Name[ca]=MX Boot Repair
 Name[cs]=MX Oprava zavaděče
 Name[da]=MX Opstartsreparation
-Name[de]=MX Bootreparatur
-Name[el]=Επισκευή εκκίνησης του MX
+Name[de]=MX-Boot-Reparatur
+Name[el]=MX Επισκευή φορτωτή εκκίνησης
 Name[es]=MX Reparar Inicio
 Name[es_ES]=MX Reparar Arranque
 Name[fi]=Käynnistyksen korjaus
@@ -48,7 +48,7 @@ Comment[cs]=Jednoduchá oprava zavaděče
 Comment[cy]=Atgyweirio Cist Syml
 Comment[da]=Simpel opstartsreparation
 Comment[de]=Einfache Boot-Reparatur
-Comment[el]=Απλή επισκευή εκκίνησης
+Comment[el]=Απλή επισκευή φορτωτή εκκίνησης
 Comment[eo]=Simpla Boot Riparo
 Comment[es]=Reparación de Inicialización
 Comment[es_ES]=Un reparador de arranque sencillo
