--- a/debian/rules
+++ b/debian/rules
@@ -3,14 +3,17 @@ export QT_SELECT=5
 
 QMAKE_OPTS = DEFINES+=NO_DEBUG_ON_CONSOLE
 MAKE_OPTS  = QMAKE=qmake-qt5 LRELEASE=lrelease-qt5 QMAKE_OPTS="$(QMAKE_OPTS)"
+DEB_BUILD_VERSION := $(shell dpkg-parsechangelog -S Version)
 
 override_dh_auto_clean:
 	dh_auto_clean
+	rm -f translations/*.qm
 	rm -f src/translations/*.qm
 
 override_dh_auto_build:
 	lrelease *.pro
-	head -n1 debian/changelog | sed -e "s/.*(\([^(]*\)).*/const QString VERSION {\"\1\"};/" > version.h
+	mv version.h version.h~
+	echo "const QString VERSION {\"$(DEB_BUILD_VERSION)\"};" > version.h
 	dh_auto_build -- $(MAKE_OPTS)
 
 override_dh_auto_install:
@@ -18,6 +21,9 @@ override_dh_auto_install:
 
 override_dh_shlibdeps:
 	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
+
+execute_after_dh_builddeb:
+	mv version.h~ version.h
 
 %:
 	dh $@ --no-automatic-dbgsym --parallel 
