--- a/mx-boot-repair.desktop
+++ b/mx-boot-repair.desktop
@@ -142,7 +142,7 @@ Comment[yo]=Simple Boot Tunṣe
 Comment[zh_CN]=简单的启动修复工具
 Comment[zh_TW]=簡單的開機修復工具
 Comment=Simple Boot Repair
-Exec=mxbr-launcher
+Exec=mx-boot-repair
 Icon=mx-boot-repair
 NoDisplay=false
 Categories=System;MX-Maintenance;
